--- a/Lab3/burgerapp/src/main/resources/templates/index.html
+++ b/Lab3/burgerapp/src/main/resources/templates/index.html
@@ -15,16 +15,19 @@
             <p>Witaj w Burgerowni! Zamawiaj, zapłać, odbierz specjalny kod i czekaj na swoje zamówienie!</p>
         </div>
     </div>
-    <a th:href="@{/zamowienie}" class="btn btn-success">Zamówienie</a>
+    <a th:href="@{/order}" class="btn btn-success">Zamówienie</a>
+    <div th:each="burger: ${@clientOrder.getOrder().getBurgers()}">
+        <p th:text="${burger.name}"></p>
+    </div>
     <div th:remove="all-but-first">
-        <div class="media col-6 offset-3" th:each="burger: ${burgers}">
+        <div class="media col-6 offset-3" th:each="burger:${burgers}">
             <i class="material-icons">fastfood</i>
             <div class="media-body">
                 <a href="#" th:href="@{|/danie/${#strings.replace(burger.name, ' ', '-')}|}">
                     <h5 th:text="|${burger.name}(${burger.price}zł)|">test test (25zł)</h5>
                 </a>
                 <p th:text="${burger.shortDescription}">test.</p>
-                <a href="#" th:href="@{/zamowienie/dodaj(burgerId=${burger.id})}" class="btn btn-success">
+                <a href="#" th:href="@{/order/add(burgerId=${burger.id})}" class="btn btn-success">
                     Dodaj do zamówienia</a>
             </div>
         </div>
